# rpmrepo_metadata

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  README_PYTHON.md  TODO.md  pyproject.toml  rust-rpmrepo_metadata.spec
.github/workflows/: ci.yml
benches/: repository.rs
examples/: copy_repo.rs  read_repo.rs  visitor_primary.rs  write_repo.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
rpmrepo/: .gitignore  Cargo.toml  README.md  TODO.md
rpmrepo/src/: lib.rs  main.rs
rpmrepo/src/commands/: create.rs  download.rs  mod.rs  sync.rs
rpmrepo/tests/: test.rs
rpmrepo_download/: Cargo.toml
rpmrepo_download/src/: download.rs  lib.rs
rpmrepo_metadata/: .gitignore  Cargo.toml  pyproject.toml
rpmrepo_metadata/benches/: repository.rs
rpmrepo_metadata/src/: common.rs  filelist.rs  lib.rs  metadata.rs  other.rs  package.rs  primary.rs  python.rs  python_ext.rs  repomd.rs  repository.rs  updateinfo.rs  utils.rs
rpmrepo_metadata/tests/: common.rs  ecosystem_tests.rs  filelists.rs  other.rs  package.rs  primary.rs  repomd.rs  repository.rs  updateinfo.rs  validate_against_createrepo_c.py
rpmrepo_metadata/tests/assets/: .gitignore  complex_repo_pkglist.txt  download_external_repos.sh  download_repos.sh
rpmrepo_metadata/tests/assets/fixture_data/specs/: rpm-complex.spec  rpm-with-invalid-chars.spec
rpmrepo_metadata/tests/assets/specs/: build_packages.sh
src/: common.rs  comps.rs  constants.rs  filelist.rs  lib.rs  main.rs  metadata.rs  other.rs  package.rs  parsing_utils.rs  primary.rs  python_ext.rs  repomd.rs  repository.rs  updateinfo.rs  utils.rs  visitor.rs
src/commands/: create.rs  download.rs  mod.rs  modify.rs
src/download/: download.rs  mod.rs
src/metadata/: filelist.rs  metadata.rs  mod.rs  other.rs  primary.rs  repomd.rs  repository.rs  updateinfo.rs
tests/: common.rs  comps.rs  ecosystem_tests.rs  filelists.rs  other.rs  package.rs  primary.rs  repomd.rs  repository.rs  updateinfo.rs  validate_against_createrepo_c.py
tests/assets/: build_fixtures.sh  build_repos.sh  download_external_repos.sh
tests/assets/specs/: rpm-complex.spec  rpm-with-non-ascii.spec
tests/python/: compare.py  conftest.py  test_comps.py  test_errors.py  test_evr.py  test_package.py  test_repository.py  test_roundtrip.py  test_updateinfo.py
