[package]
name = "rpmrepo_metadata"
version = "0.4.0"
authors = ["Daniel Alley <dalley@redhat.com>"]
edition = "2024"
license = "MPL-2.0"
description = "A library for parsing RPM repository metadata."
include = ["/src", "/benches", "/pyproject.toml", "/README.md"]
readme = "README.md"
repository = "https://github.com/dralley/rpmrepo_metadata/"
homepage = "https://github.com/dralley/rpmrepo_metadata/"
documentation = "https://docs.rs/rpmrepo_metadata/"

[features]
python_ext = ["pyo3"]
read_rpm = ["rpm"]
default = ["python_ext", "read_rpm"]

[dependencies]
quick-xml = { version = "0.23.0", default-features = false }
# rayon = "1.5.1"
thiserror = "2"
niffler = { version = "3", features = ["bz2", "lzma", "gz", "zstd"], default-features = false }
flate2 = { version = "1", default-features = false, features = ["zlib-rs"] }
bzip2 = { version = "0.5.2", default-features = false, features = ["libbz2-rs-sys"] }
rpm = { version = "0.17.0", default-features = false, optional = true }
# tempdir = "0.3.7"
digest = "0.10.6"
sha1 = "0.10.5"
sha2 = "0.10.6"
md-5 = "0.10.5"
# bitflags = "1.3.2"
hex = "0.4.3"
indexmap = "2.0.0"
pyo3 = { version = "0.24", features = ["extension-module"], optional = true }

[lib]
name = "rpmrepo_metadata"
crate-type = ["lib", "cdylib"]

[dev-dependencies]
tempdir = "0.3.7"
pretty_assertions = "1.4.0"
criterion = "0.5.1"

[[test]]
name = "package"
required-features = ["read_rpm"]
path = "tests/package.rs"

[[bench]]
name = "repository"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
debuginfo = 1
lto = "thin"
