[package]
name = "rpmrepo_metadata"
version = "0.1.0"
authors = ["Daniel Alley <dalley@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { path = "../../quick-xml", default-features = false }
flate2 = "1.0.21"
# rayon = "1.5.1"
thiserror = "1.0.28"
sha2 = "0.10.0"
niffler = { version = "2.4.0", features = ["bz2", "xz", "gz"], default-features = false }
once_cell = "1.8.0"
# rpm-rs = { version = "0.8.1", default-features = true }
tempdir = "0.3.7"
ring = "0.16.20"
# bitflags = "1.3.2"
hex = "0.4.3"
indexmap = "1.7.0"

[dev-dependencies]
tempdir = "0.3.7"
pretty_assertions = "1.0.0"
once_cell = "1.8.0"
criterion = "0.3"

[[bench]]
name = "repository"
harness = false

# [patch.crates-io]
# quick-xml = { path = "../quick-xml", default-features = false }
# # rpm-rs = { path = "../rpm-rs" }
