[package]
name = "rpmrepo_metadata"
version = "0.1.0"
authors = ["Daniel Alley <dalley@redhat.com>"]
edition = "2021"
license = "MPL-2.0"
description = "A library for parsing RPM repository metadata."

[features]
python = ["pyo3"]

[dependencies]
quick-xml = { path = "../../quick-xml", default-features = false }
# rayon = "1.5.1"
thiserror = "1.0.28"
niffler = { version = "2.4.0", features = ["bz2", "xz", "gz"], default-features = false }
# rpm-rs = { version = "0.8.1", default-features = true }
# tempdir = "0.3.7"
digest = "0.10.2"
sha1 = "0.10.0"
sha2 = "0.10.1"
# bitflags = "1.3.2"
hex = "0.4.3"
indexmap = "1.7.0"
pyo3 = { version = "0.15.1", features = ["extension-module"], optional = true }

[lib]
name = "rpmrepo_metadata"
crate-type = ["lib", "cdylib"]

[dev-dependencies]
tempdir = "0.3.7"
pretty_assertions = "1.0.0"
once_cell = "1.8.0"
criterion = "0.3"

[[bench]]
name = "repository"
harness = false

# [patch.crates-io]
# quick-xml = { path = "../quick-xml", default-features = false }
# # rpm-rs = { path = "../rpm-rs" }

[profile.dev]
opt-level = 1

[profile.release]
debuginfo = 1
lto = "thin"
